--- a/android-nfc/AndroidManifest.xml
+++ b/android-nfc/AndroidManifest.xml
@@ -1,18 +1,33 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-  package="com.jameselsey.demos.androidnfc" android:versionCode="1" android:versionName="1.0-SNAPSHOT">
+          package="com.jameselsey.demos.androidnfc" android:versionCode="1" android:versionName="1.0-SNAPSHOT">
 
-  <uses-sdk android:minSdkVersion="8"
-            android:targetSdkVersion="16" />
+    <uses-sdk android:minSdkVersion="8"
+              android:targetSdkVersion="16"/>
 
-  <application android:icon="@drawable/icon" android:label="@string/app_name">
-    <activity android:name=".HelloAndroidActivity">
-      <intent-filter>
-        <action android:name="android.intent.action.MAIN" />
-        <category android:name="android.intent.category.LAUNCHER" />
-      </intent-filter>
-    </activity>
-  </application>
+    <uses-permission android:name="android.permission.NFC"/>
+    <uses-feature android:name="android.hardware.nfc" android:required="true"/>
+
+    <application android:icon="@drawable/icon" android:label="@string/app_name" android:theme="@android:style/Theme.NoTitleBar">
+        <activity android:name=".DefaultActivity">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN"/>
+                <category android:name="android.intent.category.LAUNCHER"/>
+            </intent-filter>
+        </activity>
+
+        <activity android:name=".PlainTextTagWriter">
+        </activity>
+
+        <activity android:name=".PlainTextTagReader">
+            <intent-filter>
+                <action android:name="android.nfc.action.NDEF_DISCOVERED"/>
+                <category android:name="android.intent.category.DEFAULT"/>
+                <data android:mimeType="text/plain" />
+            </intent-filter>
+        </activity>
+    </application>
+
 
 </manifest>
 
